--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,6 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  h1 Lucking
+  .container Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia, officia ipsum modi delectus illo eveniet vero dolorem doloribus eligendi, placeat sed iste dignissimos cupiditate tenetur magnam adipisci iure at error.
+    .background
