--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,15 @@
 extends layout
 
 block content
-  h1 Lucking
-  .container Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia, officia ipsum modi delectus illo eveniet vero dolorem doloribus eligendi, placeat sed iste dignissimos cupiditate tenetur magnam adipisci iure at error.
-    .background
+
+  .nav 
+    ul
+      li About us
+      li Learn more
+      li Register
+  img(src='../img/logo.png', alt='Lucking', height='100')
+  .container
+    p Log in with facebook ---> We use facebook to identify your interests
+    p 2. Choose your interests----> We will match this interests vs the ones you have on facebook so we can analyze them and hand pick the coolest venues in town for your plan. 
+    p We tell you where to go ---> Either you choose to go on your own or uber, yay you will get the tool to find that mysterious place we have prepared for you. 
+    P Enjoy a epic experience---> The rest is up to you!!
