--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,8 +2,10 @@ doctype html
 html
   head
     title= title
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
-    link(href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
-    script(src='http://code.jquery.com/jquery-3.2.1.js')
+    link(href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css')
   body
     block content
+
+    script(src='http://code.jquery.com/jquery-3.2.1.js')
