--- a/views/index.pug
+++ b/views/index.pug
@@ -9,13 +9,15 @@ block content
       <li><a href="#">About us</a></li>
     </ul>
   </nav>
-  
+
   <img class="center img-responsive" src="../img/logo.png" height="90px" align="middle">
 
   <div class="container">
     <p>Log in with facebook ---> We use facebook to identify your interests</p>
-    <p>2. Choose your interests----> We will match this interests vs the ones you have on facebook so we can analyze them and hand pick the coolest venues in town for your plan. </p>
-    <p>We tell you where to go ---> Either you choose to go on your own or uber, yay you will get the tool to find that mysterious place we have prepared for you. </p>
+    <p>2. Choose your interests----> We will match this interests vs the ones you have on facebook so we can analyze them and
+      hand pick the coolest venues in town for your plan. </p>
+    <p>We tell you where to go ---> Either you choose to go on your own or uber, yay you will get the tool to find that mysterious
+      place we have prepared for you. </p>
     <p>Enjoy a epic experience---> The rest is up to you!!</p>
     <div class="row">
       <div class="col-md-3">hola</div>
@@ -26,15 +28,20 @@ block content
       <div class="col-md-3">hola</div>
     </div>
 
+    <br><br>
+
     <div class="text-center">
-      <form action="">
-        <p>Email</p>
-        <input type="email">
-        <p>Name</p>
-        <input type="text">
-        <p>Write us something</p>
-        <input type="text"><br><br>
-        <button>Send</button>
+      <form role="form">
+        <div class="form-group">
+          <label>Name</label>
+          <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Enter your name">
+        </div>
+        <div class="form-group">
+          <label>Email address</label>
+          <input type="email" class="form-control" placeholder="Enter email">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
       </form>
-  </div>
+    </div>
+
   </div>
