--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,9 +5,10 @@ html
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
     link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/team.css')
+    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
     link(href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css')
   body
     block content
 
-    script(src='http://code.jquery.com/jquery-3.2.1.js')
     script(src='/scripts/team.js')
