--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,12 @@ extends layout
 
 block content
   br
-  h1.pink.text-center The spontaneous experience that dares you to explore the city📱
+  .text-center.phone
+    img(src="img/phone.png")
+  h1.pink.text-center.col-md-8.col-md-offset-2 The spontaneous experience that dares you to explore the city
+  br
+  br
+  br
   br
   .row.section-main
     .col-sm-6.text-center
