--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,7 +7,16 @@ html
     link(rel='stylesheet', href='/stylesheets/animate.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/custom_layout.css')
-    
+
+    meta(property='og:title', content='Lucking App')
+    meta(property='og:type', content='article')
+    meta(property='og:url', content='http://www.lucking.mx')
+    meta(property='og:image', content='http://www.lucking.mx/img/share.jpg')
+    meta(property='og:description', content='The spontaneous experience that dares you to explore the city')
+    meta(property='og:site_name', content='Lucking App')
+    meta(property='fb:admins', content='258877701281031')
+
+        
 
 
 
