--- a/views/team.pug
+++ b/views/team.pug
@@ -2,33 +2,29 @@ extends layout
 
 block content
 
-    <nav class="text-right">
-        <ul>
-            <li class="active"><a href="#">Pre-Register</a></li>
-            <li><a href="#">Learn more</a></li>
-            <li><a href="#">About us</a></li>
-        </ul>
-    </nav>
+    <div class="art">
+        <img class="corona" src="../img/Group 29.png" alt="">
+        <img src="../img/Group 54.png" alt="">
+        <img src="../img/Group 38.png" alt="">
+        <img src="../img/Group 41.png" alt="">
+    </div>
 
-    <div class="container main">
+        <div class="container main">
         <div class="row">
-            <h1 style="text-align:center;color:#fff;font-weight:bold;margin-bottom:60px;">Team Members</h1>
+            <h1 style="text-align:center;color:#ff2986;font-weight:bold;margin-bottom:60px;">Team Members</h1>
             <section id="team">
                 <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
                     <div class="member-wrapper">
                         <div class="member">
-                            <div class="photo" style="background-image: url('https://farm5.staticflickr.com/4069/4277734103_d38b5fac84_o.jpg')">
+                        <div class="photo" style="background-image: url('../img/pam.jpg')">
                             </div>
                             <div class="info">
-                                <h3>Pamela Escobar</h3>
-                                <div class="social">
-                                    <a href="#"><i class="fa fa-facebook"></i></a>
-                                    <a href="#"><i class="fa fa-linkedin"></i></a>
-                                    <a href="#"><i class="fa fa-google-plus"></i></a>
-                                    <a href="#"><i class="fa fa-envelope"></i></a>
-                                </div>
+                                <h3 style="background-color: #368f6f;">Pamela Escobar</h3>
                                 <div class="bio">
                                     <h4>I'm Pamela Escobar, a hustler by heart with knowledge in marketing, community management and selling techniques; with interest in traveling.</h4>
+                                    <br>
+                                    <a href="#" class="fa fa-facebook"></a>
+                                    <a href="#" class="fa fa-twitter"></a>
                                 </div>
                             </div>
                         </div>
@@ -37,18 +33,15 @@ block content
                 <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
                     <div class="member-wrapper">
                         <div class="member">
-                            <div class="photo" style="background-image: url('https://farm5.staticflickr.com/4069/4277734103_d38b5fac84_o.jpg')">
+                            <div class="photo" style="background-image: url(../img/santiago.jpg)">
                             </div>
                             <div class="info">
-                                <h3>Santiago Yañez</h3>
-                                <div class="social">
-                                    <a href="#"><i class="fa fa-facebook"></i></a>
-                                    <a href="#"><i class="fa fa-linkedin"></i></a>
-                                    <a href="#"><i class="fa fa-google-plus"></i></a>
-                                    <a href="#"><i class="fa fa-envelope"></i></a>
-                                </div>
+                                <h3  style="background-color: #9a4d9f;">Santiago Yañez</h3>
                                 <div class="bio">
                                     <h4>Santiago Yañez is a passionate Industrial Engineer focused on: innovation & entrepreneurship with interests on fintech, tech guy, business developer & negotiator</h4>
+                                    <br>
+                                    <a href="#" class="fa fa-facebook"></a>
+                                    <a href="#" class="fa fa-twitter"></a>
                                 </div>
                             </div>
                         </div>
@@ -57,18 +50,15 @@ block content
                 <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
                     <div class="member-wrapper">
                         <div class="member">
-                            <div class="photo" style="background-image: url('https://farm5.staticflickr.com/4069/4277734103_d38b5fac84_o.jpg')">
+                            <div class="photo" style="background-image: url('../img/brandon.jpg')">
                             </div>
                             <div class="info">
-                                <h3>Brandon Reyes</h3>
-                                <div class="social">
-                                    <a href="#"><i class="fa fa-facebook"></i></a>
-                                    <a href="#"><i class="fa fa-linkedin"></i></a>
-                                    <a href="#"><i class="fa fa-google-plus"></i></a>
-                                    <a href="#"><i class="fa fa-envelope"></i></a>
-                                </div>
+                                <h3 style="background-color: #d6d157;">Brandon Reyes</h3>
                                 <div class="bio">
                                     <h4>‪I'm Brandon Reyes, 20 years old, Android developer and Java developer. Interested in ethical hacking, IoT, business and software developing.</h4>
+                                    <br>
+                                    <a href="#" class="fa fa-facebook"></a>
+                                    <a href="#" class="fa fa-twitter"></a>
                                 </div>
                             </div>
                         </div>
@@ -77,18 +67,15 @@ block content
                 <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
                     <div class="member-wrapper">
                         <div class="member">
-                            <div class="photo" style="background-image: url('https://farm5.staticflickr.com/4069/4277734103_d38b5fac84_o.jpg')">
+                            <div class="photo" style="background-image: url('../img/rulo.jpg')">
                             </div>
                             <div class="info">
-                                <h3>Rulótico González</h3>
-                                <div class="social">
-                                    <a href="#"><i class="fa fa-facebook"></i></a>
-                                    <a href="#"><i class="fa fa-linkedin"></i></a>
-                                    <a href="#"><i class="fa fa-google-plus"></i></a>
-                                    <a href="#"><i class="fa fa-envelope"></i></a>
-                                </div>
+                                <h3 style="background-color: #344597;">Rulótico González</h3>
                                 <div class="bio">
-                                    <h4>Rulótico González > Interactive designer, Unicorn(Code - Design),Animator ,Co-founder Sable Digital Studio | DribbbleCDMX Meetup</h4>
+                                    <h4>Rulótico González > Interactive designer, Unicorn(Code - Design),Animator, Co-founder Sable Digital Studio | DribbbleCDMX Meetup</h4>
+                                    <br>
+                                    <a href="#" class="fa fa-facebook"></a>
+                                    <a href="#" class="fa fa-twitter"></a>
                                 </div>
                             </div>
                         </div>
@@ -97,18 +84,15 @@ block content
                 <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
                     <div class="member-wrapper">
                         <div class="member">
-                            <div class="photo" style="background-image: url('https://farm5.staticflickr.com/4045/4277734075_278d4ddfa0_o.jpg')">
+                            <div class="photo" style="background-image: url('../img/gerardo.jpg')">
                             </div>
                             <div class="info">
-                                <h3>Gerardo Medina</h3>
-                                <div class="social">
-                                    <a href="#"><i class="fa fa-facebook"></i></a>
-                                    <a href="#"><i class="fa fa-linkedin"></i></a>
-                                    <a href="#"><i class="fa fa-google-plus"></i></a>
-                                    <a href="#"><i class="fa fa-envelope"></i></a>
-                                </div>
+                                <h3 style="background-color: #ec1a57;">Gerardo Medina</h3>
                                 <div class="bio">
                                     <h4>I'm Gerardo Medina, 22 years old, frontend and backend web developer, interested in coding, business, networking and new experiences!</h4>
+                                    <br>
+                                    <a href="#" class="fa fa-facebook"></a>
+                                    <a href="#" class="fa fa-twitter"></a>
                                 </div>
                             </div>
                         </div>
@@ -120,15 +104,12 @@ block content
                             <div class="photo" style="background-image: url('https://farm5.staticflickr.com/4003/4278480984_157b32696a_o.jpg')">
                             </div>
                             <div class="info">
-                                <h3>David Hernández</h3>
-                                <div class="social">
-                                    <a href="#"><i class="fa fa-facebook"></i></a>
-                                    <a href="#"><i class="fa fa-linkedin"></i></a>
-                                    <a href="#"><i class="fa fa-google-plus"></i></a>
-                                    <a href="#"><i class="fa fa-envelope"></i></a>
-                                </div>
+                                <h3 style="background-color: #e4e05b;">David Hernández</h3>
                                 <div class="bio">
-                                    <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, libero et amet, ab incidunt tenetur commodi vero cumque sunt deserunt, ipsam? Sed recusandae optio eum earum ipsum ipsa, similique quo.</h4>
+                                    <h4>I'm David Hernandez, Information Designer, MACD CSM alumni. Multimedia design professor at Universidad Anáhuac. Interested in Design, art, media, UX/UI.</h4>
+                                    <br>
+                                    <a href="#" class="fa fa-facebook"></a>
+                                    <a href="#" class="fa fa-twitter"></a>
                                 </div>
                             </div>
                         </div>
