--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,7 +11,7 @@ html
     meta(property='og:title', content='Lucking App')
     meta(property='og:type', content='article')
     meta(property='og:url', content='http://www.lucking.mx')
-    meta(property='og:image', content='http://www.lucking.mx/img/share.jpg')
+    meta(property='og:image', content='http://www.lucking.mx/img/share.png')
     meta(property='og:description', content='The spontaneous experience that dares you to explore the city')
     meta(property='og:site_name', content='Lucking App')
     meta(property='fb:admins', content='258877701281031')
