--- a/views/team.pug
+++ b/views/team.pug
@@ -23,8 +23,8 @@ block content
                                 <div class="bio">
                                     <h4>I'm Pamela Escobar, a hustler by heart with knowledge in marketing, community management and selling techniques; with interest in traveling.</h4>
                                     <br>
-                                    <a href="#" class="fa fa-facebook"></a>
-                                    <a href="#" class="fa fa-twitter"></a>
+                                    <a href="https://www.facebook.com/pamelaixchel" class="fa fa-facebook"></a>
+                                    <a href="http://www.twitter.com/@pam_escobar_v" class="fa fa-twitter"></a>
                                 </div>
                             </div>
                         </div>
@@ -40,8 +40,8 @@ block content
                                 <div class="bio">
                                     <h4>Santiago Yañez is a passionate Industrial Engineer focused on: innovation & entrepreneurship with interests on fintech, tech guy, business developer & negotiator</h4>
                                     <br>
-                                    <a href="#" class="fa fa-facebook"></a>
-                                    <a href="#" class="fa fa-twitter"></a>
+                                    <a href="https://www.facebook.com/san.yanez" class="fa fa-facebook"></a>
+                                    <a href="http://www.twitter.com/@santiagoys" class="fa fa-twitter"></a>
                                 </div>
                             </div>
                         </div>
@@ -57,8 +57,8 @@ block content
                                 <div class="bio">
                                     <h4>‪I'm Brandon Reyes, 20 years old, Android developer and Java developer. Interested in ethical hacking, IoT, business and software developing.</h4>
                                     <br>
-                                    <a href="#" class="fa fa-facebook"></a>
-                                    <a href="#" class="fa fa-twitter"></a>
+                                    <a href="https://www.facebook.com/Brandonkoob" class="fa fa-facebook"></a>
+                                    <a href="https://twitter.com/brandonitas" class="fa fa-twitter"></a>
                                 </div>
                             </div>
                         </div>
@@ -74,8 +74,8 @@ block content
                                 <div class="bio">
                                     <h4>Rulótico González > Interactive designer, Unicorn(Code - Design),Animator, Co-founder Sable Digital Studio | DribbbleCDMX Meetup</h4>
                                     <br>
-                                    <a href="#" class="fa fa-facebook"></a>
-                                    <a href="#" class="fa fa-twitter"></a>
+                                    <a href="https://www.facebook.com/rulotico" class="fa fa-facebook"></a>
+                                    <a href="http://www.twitter.com/@rulotico" class="fa fa-twitter"></a>
                                 </div>
                             </div>
                         </div>
@@ -91,8 +91,8 @@ block content
                                 <div class="bio">
                                     <h4>I'm Gerardo Medina, 22 years old, frontend and backend web developer, interested in coding, business, networking and new experiences!</h4>
                                     <br>
-                                    <a href="#" class="fa fa-facebook"></a>
-                                    <a href="#" class="fa fa-twitter"></a>
+                                    <a href="https://www.facebook.com/gerardopuas" class="fa fa-facebook"></a>
+                                    <a href="https://twitter.com/gerardomdnr" class="fa fa-twitter"></a>
                                 </div>
                             </div>
                         </div>
@@ -101,15 +101,15 @@ block content
                 <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
                     <div class="member-wrapper">
                         <div class="member">
-                            <div class="photo" style="background-image: url('https://farm5.staticflickr.com/4003/4278480984_157b32696a_o.jpg')">
+                            <div class="photo" style="background-image: url('../img/david.jpg')">
                             </div>
                             <div class="info">
-                                <h3 style="background-color: #e4e05b;">David Hernández</h3>
+                                <h3 style="background-color: #90abda;">David Hernández</h3>
                                 <div class="bio">
                                     <h4>I'm David Hernandez, Information Designer, MACD CSM alumni. Multimedia design professor at Universidad Anáhuac. Interested in Design, art, media, UX/UI.</h4>
                                     <br>
-                                    <a href="#" class="fa fa-facebook"></a>
-                                    <a href="#" class="fa fa-twitter"></a>
+                                    <a href="https://www.facebook.com/david.hernandez.mendez" class="fa fa-facebook"></a>
+                                    <a href="https://twitter.com/misterescorpion" class="fa fa-twitter"></a>
                                 </div>
                             </div>
                         </div>
