Social media icons

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -30,6 +30,12 @@ html
           a(href='/team') Team
         li
           a(href='/') How to?
+        li
+          a.fa.fa-facebook.nofondo(href='https://www.facebook.com/luckingapp/')
+        li
+          a.fa.fa-twitter.nofondo(href='https://twitter.com/luckingapp')
+        li
+          a.fa.fa-instagram.nofondo(href='https://www.instagram.com/lucking_app/')
 
     .container.main-cont
         block content
